--- a/sellerhome.html
+++ b/sellerhome.html
@@ -84,7 +84,7 @@ $conn->close();
 
         </div>
         <div class="middle">
-            <!-- <h1 data-splitting>welcome to agro village</h1> -->
+            
             <p>welcome to agro village</p>
         </div>
         <div class="right">
@@ -133,13 +133,11 @@ $conn->close();
 
             <div class="row">
                 <div class="col-md-8 info-div">products currently available <span>
-                        <div class="values pa"> [
-                            <?php echo htmlspecialchars($product_count); ?>]
+                        <div class="values pa"> [<?php echo htmlspecialchars($product_count); ?>]
                         </div>
                     </span></div>
                 <div class="col-6 col-md-4 info-div">orders <span>
-                        <div class="values or">[
-                            <?php echo htmlspecialchars($order_count); ?>]
+                        <div class="values or">[<?php echo htmlspecialchars($order_count); ?>]
                         </div>
                     </span></div>
             </div>
